--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -1,60 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "nteract": {
-      "version": "0.12.3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "V58rxea0HqSa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "V58rxea0HqSa",
         "outputId": "64abe7df-22ce-4d49-e11d-6d4d613e12e6"
       },
-      "source": [
-        "import os\n",
-        "# Find the latest version of spark 3.0  from http://www-us.apache.org/dist/spark/ and enter as the spark version\n",
-        "# For example:\n",
-        "# spark_version = 'spark-3.0.2'\n",
-        "spark_version = 'spark-3.3.0'\n",
-        "os.environ['SPARK_VERSION']=spark_version\n",
-        "\n",
-        "# Install Spark and Java\n",
-        "!apt-get update\n",
-        "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
-        "!wget -q http://www.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop3.tgz\n",
-        "!tar xf $SPARK_VERSION-bin-hadoop3.tgz\n",
-        "!pip install -q findspark\n",
-        "\n",
-        "# Set Environment Variables\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
-        "os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop3\"\n",
-        "\n",
-        "# Start a SparkSession\n",
-        "import findspark\n",
-        "findspark.init()"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Get:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
             "Ign:2 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
@@ -82,26 +41,45 @@
             "Reading package lists... Done\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "# Find the latest version of spark 3.0  from http://www-us.apache.org/dist/spark/ and enter as the spark version\n",
+        "# For example:\n",
+        "# spark_version = 'spark-3.0.2'\n",
+        "spark_version = 'spark-3.3.0'\n",
+        "os.environ['SPARK_VERSION']=spark_version\n",
+        "\n",
+        "# Install Spark and Java\n",
+        "!apt-get update\n",
+        "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
+        "!wget -q http://www.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop3.tgz\n",
+        "!tar xf $SPARK_VERSION-bin-hadoop3.tgz\n",
+        "!pip install -q findspark\n",
+        "\n",
+        "# Set Environment Variables\n",
+        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
+        "os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop3\"\n",
+        "\n",
+        "# Start a SparkSession\n",
+        "import findspark\n",
+        "findspark.init()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "_xKwTpATHqSe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "_xKwTpATHqSe",
         "outputId": "30c1e202-77a9-4c84-9b86-294a69094599"
       },
-      "source": [
-        "# Download the Postgres driver that will allow Spark to interact with Postgres.\n",
-        "!wget https://jdbc.postgresql.org/download/postgresql-42.2.16.jar"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2022-10-20 02:53:17--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
@@ -116,19 +94,23 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Download the Postgres driver that will allow Spark to interact with Postgres.\n",
+        "!wget https://jdbc.postgresql.org/download/postgresql-42.2.16.jar"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "MMqDAjVS0KN9"
       },
+      "outputs": [],
       "source": [
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.appName(\"M16-Amazon-Challenge2\").getOrCreate()"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,25 +123,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "CtCmBhQJY-9Z",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "CtCmBhQJY-9Z",
         "outputId": "001f841d-083f-4fff-bb41-9c4fdf160fdb"
       },
-      "source": [
-        "from pyspark import SparkFiles\n",
-        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Watches_v1_00.tsv.gz\"\n",
-        "spark.sparkContext.addFile(url)\n",
-        "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"amazon_reviews_us_Watches_v1_00.tsv.gz\"), sep=\"\\t\", header=True, inferSchema=True)\n",
-        "df.show()"
-      ],
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-------------------+\n",
             "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|        review_date|\n",
@@ -189,6 +164,13 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "from pyspark import SparkFiles\n",
+        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Watches_v1_00.tsv.gz\"\n",
+        "spark.sparkContext.addFile(url)\n",
+        "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"amazon_reviews_us_Watches_v1_00.tsv.gz\"), sep=\"\\t\", header=True, inferSchema=True)\n",
+        "df.show()"
       ]
     },
     {
@@ -202,12 +184,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Filter Vote Dataframe to retrieve rows with >= 20 total votes\n",
-        "votes20_df = df.select([\"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
-        "votes20_df = votes20_df.filter(votes20_df[\"total_votes\"] >=20)\n",
-        "votes20_df.show(20)"
-      ],
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,11 +192,10 @@
         "id": "2KUM_xwp1tbs",
         "outputId": "ea296aa4-4e21-474a-e42a-be954626c6df"
       },
-      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -249,15 +225,17 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Filter Vote Dataframe to retrieve rows with >= 20 total votes\n",
+        "votes20_df = df.select([\"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
+        "votes20_df = votes20_df.filter(votes20_df[\"total_votes\"] >=20)\n",
+        "votes20_df.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Filter New Dataframe created in previous step to retrieve rows where 'helpful_votes'/'total_votes >= 50%\n",
-        "helpfulvotes_df = votes20_df.filter(votes20_df[\"helpful_votes\"]/votes20_df[\"total_votes\"] >= 0.50)\n",
-        "helpfulvotes_df.show(20)"
-      ],
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,11 +243,10 @@
         "id": "D-m6R7Ki27dF",
         "outputId": "52e11f06-dde8-4fd2-db8f-02d20a3636b0"
       },
-      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -299,15 +276,16 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Filter New Dataframe created in previous step to retrieve rows where 'helpful_votes'/'total_votes >= 50%\n",
+        "helpfulvotes_df = votes20_df.filter(votes20_df[\"helpful_votes\"]/votes20_df[\"total_votes\"] >= 0.50)\n",
+        "helpfulvotes_df.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Filter New Dataframe created in previous step to retrieve rows containing a paid Vine program review\n",
-        "paidreview_df = helpfulvotes_df.filter(helpfulvotes_df[\"vine\"] == 'Y' )\n",
-        "paidreview_df.show(20)"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -315,11 +293,10 @@
         "id": "YuRfF-Sz27gu",
         "outputId": "401ab568-7030-4078-a53e-1b3859f7785b"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -349,15 +326,16 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Filter New Dataframe created in previous step to retrieve rows containing a paid Vine program review\n",
+        "paidreview_df = helpfulvotes_df.filter(helpfulvotes_df[\"vine\"] == 'Y' )\n",
+        "paidreview_df.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Filter New Dataframe created 2 previous steps ago to retrieve rows containing a review not part of the Vine program \n",
-        "nonpaidreview_df = helpfulvotes_df.filter(helpfulvotes_df[\"vine\"] == 'N' )\n",
-        "nonpaidreview_df.show(20)"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -365,11 +343,10 @@
         "id": "3_e4vdOM27kH",
         "outputId": "6844563c-0ab5-437c-efdb-d3a68880f3b0"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -399,30 +376,59 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Filter New Dataframe created 2 previous steps ago to retrieve rows containing a review not part of the Vine program \n",
+        "nonpaidreview_df = helpfulvotes_df.filter(helpfulvotes_df[\"vine\"] == 'N' )\n",
+        "nonpaidreview_df.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from pyspark.sql.functions import col, avg"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "dU_bCZPm27nb"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from pyspark.sql.functions import col, avg"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Number of reviews, number of 5-star reviews, percentage of 5-star reviews for each type"
-      ],
       "metadata": {
         "id": "mooZ8gE28Kse"
-      }
+      },
+      "source": [
+        "### Number of reviews, number of 5-star reviews, percentage of 5-star reviews for each type"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CHSlQ50C8gMD",
+        "outputId": "6cd0c969-87db-4a67-cf15-9195b8e1ea9a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The total count of watch reviews is 8409\n",
+            "The total count of 5 star watch reviews is 4347\n",
+            "The total count of Vine watch reviews is 47\n",
+            "The total count of 5 star Vine watch reviews is 15\n",
+            "The total count of Non-Vine watch reviews is 8362\n",
+            "The total count of 5 star Non-Vine watch reviews is 4332\n",
+            "The percent of 5 star Vine watch reviews is 31.9%\n",
+            "The percent of 5 star Non-Vine watch reviews is 51.8%\n"
+          ]
+        }
+      ],
       "source": [
         "reviews = helpfulvotes_df.count()\n",
         "fivestarreviews = helpfulvotes_df.filter(helpfulvotes_df[\"star_rating\"] == '5').count()\n",
@@ -440,69 +446,25 @@
         "print(\"The total count of 5 star Non-Vine watch reviews is \"  + str(fivestarreviewsnonvine))\n",
         "print(f\"The percent of 5 star Vine watch reviews is \"  + \"{0:.1%}\".format(percentvinefive))\n",
         "print(f\"The percent of 5 star Non-Vine watch reviews is \"  + \"{0:.1%}\".format(percentnonvinefive))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CHSlQ50C8gMD",
-        "outputId": "6cd0c969-87db-4a67-cf15-9195b8e1ea9a"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The total count of watch reviews is 8409\n",
-            "The total count of 5 star watch reviews is 4347\n",
-            "The total count of Vine watch reviews is 47\n",
-            "The total count of 5 star Vine watch reviews is 15\n",
-            "The total count of Non-Vine watch reviews is 8362\n",
-            "The total count of 5 star Non-Vine watch reviews is 4332\n",
-            "The percent of 5 star Vine watch reviews is 31.9%\n",
-            "The percent of 5 star Non-Vine watch reviews is 51.8%\n"
-          ]
-        }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "QCatJM2tburj"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WDf5TtSU8g4b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bd3cabe6-49e0-49a0-ecf5-d1f603b85324"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The percent of 5 star Vine watch reviews is 31.9%\n",
-            "The percent of 5 star Non-Vine watch reviews is 51.8%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SXIN1l1m8g9K"
-      },
-      "execution_count": 10,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "nteract": {
+      "version": "0.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
